--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <h1>Biografi</h1>
 
     <div class="profile-container">
-        <img src="WIN_20250521_10_08_18_Pro.jpg" alt="Foto Saya">
+        <img src="WhatsApp Image 2025-05-31 at 19.45.52_98e326b4.jpg" alt="Foto Saya">
         <div class="bio">
             <p>Nama saya Richard Rexton Sunarso, siswa kelas 8F. Saya suka:</p>
             <ol>
